add optimization flags

--- a/cpp/conc/exec_pol/Makefile
+++ b/cpp/conc/exec_pol/Makefile
@@ -11,9 +11,9 @@ clean:
 run: clean build rerun
 
 clang_run:
-	clang++ -std=c++23 main.cpp -o demo_clang
+	clang++ -std=c++23 main.cpp -o3 -o demo_clang
 	./demo_clang
 
-gcc_run:
-	gcc main.cpp -lstdc++ -std=c++23 -o demo_gcc
+gcc_run: 
+	gcc main.cpp -lstdc++ -std=c++23 -o3 -o demo_gcc
 	./demo_gcc
